--- a/index.html
+++ b/index.html
@@ -1,111 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Library Website</title>
-</head>
-<body style="font-family: Arial, sans-serif; line-height: 1.6;">
+    <head>
+        <title>Web Technologies</title>
+        <meta charset="utf-8" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+        />
 
-    <!-- Header section -->
-    <header style="background-color: #4CAF50; color: white; text-align: center; padding: 10px;">
-        <h1>Welcome to the City Library</h1>
-        <nav>
-            <a href="#about" style="color: white; margin: 0 10px;">About Us</a> |
-            <a href="#catalog" style="color: white; margin: 0 10px;">Catalog</a> |
-            <a href="#services" style="color: white; margin: 0 10px;">Services</a> |
-            <a href="#contact" style="color: white; margin: 0 10px;">Contact</a>
-        </nav>
-    </header>
+        
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+            integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+            crossorigin="anonymous"
+        />
+    </head>
+    <body class="bg-dark">
+        <div class="container mt-5">
+            <h1 class="text-center text-white mb-4">Web Technologies</h1>
 
-    <!-- Main content -->
-    <main>
+            <div class="card mb-3 shadow-sm">
+            <div class="card-body">
+                <h5 class="card-title">Lab Task 1</h5>
+                <p class="card-text">
+                    The website includes multiple sections: a header with navigation links, an "About Us" section, 
+                    a catalog with book listings, a services section, and a contact form. The goal is to design a 
+                    simple, user-friendly library page that provides essential information, book listings, and contact options.
+                </p>
+                <a href="Lab-1\index.html" class="btn btn-success">View Lab Task 1</a>
+            </div>
+            </div>
 
-        <!-- About Us section -->
-        <section id="about" style="padding: 20px; background-color: #f4f4f4;">
-            <h2>About Us</h2>
-            <p>Established in 1985, the City Library has been a cornerstone of knowledge and learning in our community. We offer a wide range of books, resources, and services to the public.</p>
-            <blockquote style="font-style: italic;">"A library is not a luxury but one of the necessities of life." – Henry Ward Beecher</blockquote>
-        </section>
+            <div class="card mb-3 shadow-sm">
+            <div class="card-body">
+                <h5 class="card-title">Lab Task 2</h5>
+                <p class="card-text">
+                    This lab task involves creating a cafe menu for "Camper Cafe" using HTML and CSS. 
+                    The website displays two main sections: Coffee and Desserts, each listing multiple items 
+                    along with their prices. The task focuses on structuring content with semantic HTML and 
+                    applying basic styling using external CSS to make the menu visually appealing. 
+                    Additionally, background images and layout enhancements are used to improve the user experience.
+                </p>
+                <a href="Lab-2\index.html" class="btn btn-success">View Lab Task 2</a>
+            </div>
+            </div>
+        </div>
 
-        <!-- Catalog section -->
-        <section id="catalog" style="padding: 20px;">
-            <h2>Library Catalog</h2>
-            <ul>
-                <li><strong>Fiction:</strong> Explore a vast collection of novels from various genres, including mystery, romance, and science fiction.</li>
-                <li><strong>Non-Fiction:</strong> Access biographies, historical works, and educational resources.</li>
-                <li><strong>Children's Books:</strong> A variety of fun and educational books for younger readers.</li>
-                <li><strong>E-books:</strong> Browse our selection of e-books available for download.</li>
-            </ul>
-            <table border="1" style="width: 100%; text-align: center;">
-                <caption>Featured Books</caption>
-                <thead>
-                    <tr>
-                        <th>Title</th>
-                        <th>Author</th>
-                        <th>Genre</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr>
-                        <td>The Great Gatsby</td>
-                        <td>F. Scott Fitzgerald</td>
-                        <td>Fiction</td>
-                    </tr>
-                    <tr>
-                        <td>Steve Jobs</td>
-                        <td>Walter Isaacson</td>
-                        <td>Biography</td>
-                    </tr>
-                    <tr>
-                        <td>The Cat in the Hat</td>
-                        <td>Dr. Seuss</td>
-                        <td>Children's</td>
-                    </tr>
-                </tbody>
-            </table>
-        </section>
+ 
+        <script
+            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+            crossorigin="anonymous">
+        </script>
 
-        <!-- Services section -->
-        <section id="services" style="padding: 20px; background-color: #f4f4f4;">
-            <h2>Our Services</h2>
-            <dl>
-                <dt>Book Borrowing</dt>
-                <dd>Borrow up to 10 books for a period of 2 weeks.</dd>
-                <dt>Free Wi-Fi</dt>
-                <dd>Access free Wi-Fi within the library premises.</dd>
-                <dt>Study Rooms</dt>
-                <dd>Reserve private study rooms for group or individual study.</dd>
-            </dl>
-        </section>
-
-        <!-- Contact Us section -->
-        <section id="contact" style="padding: 20px;">
-            <h2>Contact Us</h2>
-            <p>If you have any questions, feel free to reach out to us:</p>
-            <address>
-                <strong>City Library</strong><br>
-                123 Library Lane, Booktown, BT 45678<br>
-                Phone: <a href="tel:+1234567890">(123) 456-7890</a><br>
-                Email: <a href="mailto:info@citylibrary.com">info@citylibrary.com</a>
-            </address>
-            <form action="#" method="post" style="margin-top: 20px;">
-                <label for="name">Name:</label><br>
-                <input type="text" id="name" name="name" style="width: 100%; padding: 8px; margin-top: 5px;"><br><br>
-                <label for="email">Email:</label><br>
-                <input type="email" id="email" name="email" style="width: 100%; padding: 8px; margin-top: 5px;"><br><br>
-                <label for="message">Message:</label><br>
-                <textarea id="message" name="message" rows="4" style="width: 100%; padding: 8px; margin-top: 5px;"></textarea><br><br>
-                <button type="submit" style="background-color: #4CAF50; color: white; padding: 10px 20px; border: none; cursor: pointer;">Submit</button>
-            </form>
-        </section>
-
-    </main>
-
-    <!-- Footer -->
-    <footer style="text-align: center; padding: 10px; background-color: #333; color: white;">
-        <p>&copy; 2024 City Library. All rights reserved.</p>
-    </footer>
-
-</body>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
+            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+            crossorigin="anonymous">
+        </script>
+    </body>
 </html>
