--- a/Lab-2/index.html
+++ b/Lab-2/index.html
@@ -84,7 +84,7 @@
           <a href="/index.html" target="_blank">Visit our website</a>
         </p>
 
-        <p class="address">123 Free Code Camp Drive</p>
+        <p class="address">COMSATS ISLAMABAD, WAH CAMPUS</p>
 
       </footer>
 
