--- a/Lab-2/index.html
+++ b/Lab-2/index.html
@@ -165,7 +165,7 @@
 
                         </p>
 
-                        <img src="Lab-2\Images\PNGs\line_home.png" alt="main heading underline" class="img-fluid line">
+                        <img src="Images/PNGs/line_home.png" alt="main heading underline" class="img-fluid line">
                         
                         <div class="mt-5 pt-5 pb-1 mt-md-3 pt-md-3 pb-md-0 ">
 
