--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     applying basic styling using external CSS to make the menu visually appealing. 
                     Additionally, background images and layout enhancements are used to improve the user experience.
                 </p>
-                <a href="Lab-2\index.html" class="btn btn-success">View Lab Task 2</a>
+                <a href="Lab-2\html\lab-2.html" class="btn btn-success">View Lab Task 2</a>
             </div>
             </div>
         </div>
