cards with images test 1

--- a/Lab-1/lab-1.html
+++ b/Lab-1/lab-1.html
@@ -7,7 +7,6 @@
 </head>
 <body style="font-family: Arial, sans-serif; line-height: 1.6;">
 
-    <!-- Header section -->
     <header style="background-color: #4CAF50; color: white; text-align: center; padding: 10px;">
         <h1>Welcome to the City Library</h1>
         <nav>
@@ -18,17 +17,14 @@
         </nav>
     </header>
 
-    <!-- Main content -->
     <main>
 
-        <!-- About Us section -->
         <section id="about" style="padding: 20px; background-color: #f4f4f4;">
             <h2>About Us</h2>
             <p>Established in 1985, the City Library has been a cornerstone of knowledge and learning in our community. We offer a wide range of books, resources, and services to the public.</p>
             <blockquote style="font-style: italic;">"A library is not a luxury but one of the necessities of life." – Henry Ward Beecher</blockquote>
         </section>
 
-        <!-- Catalog section -->
         <section id="catalog" style="padding: 20px;">
             <h2>Library Catalog</h2>
             <ul>
@@ -37,7 +33,7 @@
                 <li><strong>Children's Books:</strong> A variety of fun and educational books for younger readers.</li>
                 <li><strong>E-books:</strong> Browse our selection of e-books available for download.</li>
             </ul>
-            <table border="1" style="width: 100%; text-align: center;">
+            <table style="width: 100%; text-align: center;">
                 <caption>Featured Books</caption>
                 <thead>
                     <tr>
@@ -66,7 +62,6 @@
             </table>
         </section>
 
-        <!-- Services section -->
         <section id="services" style="padding: 20px; background-color: #f4f4f4;">
             <h2>Our Services</h2>
             <dl>
@@ -79,7 +74,6 @@
             </dl>
         </section>
 
-        <!-- Contact Us section -->
         <section id="contact" style="padding: 20px;">
             <h2>Contact Us</h2>
             <p>If you have any questions, feel free to reach out to us:</p>
@@ -102,7 +96,6 @@
 
     </main>
 
-    <!-- Footer -->
     <footer style="text-align: center; padding: 10px; background-color: #333; color: white;">
         <p>&copy; 2024 City Library. All rights reserved.</p>
     </footer>
