--- a/Lab-2/html/lab-2.html
+++ b/Lab-2/html/lab-2.html
@@ -652,7 +652,7 @@
                         <a href="#" class="footer-items">Privacy Policy</a>
         
                         <a href="#" class="footer-items">
-                            <img src="../Images/icons/globe.png" class="footer-items" alt="globe">
+                            <img src="../Images/icons/Globe.png" class="footer-items" alt="globe">
                             English
                         </a>
         
