--- a/index.html
+++ b/index.html
@@ -15,36 +15,51 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <style>
+            .card-img-custom {
+                width: 100%; /* Adjust width as needed */
+                max-height: 200px; /* Adjust height as needed */
+                object-fit: cover; /* Keeps the aspect ratio of the image */
+            }
+        </style>
+
     </head>
     <body class="bg-dark">
         <div class="container mt-5">
-            <h1 class="text-center text-white mb-4">Web Technologies</h1>
+            <p class="h1 text-center text-white mb-4">Web Technologies</p>
 
             <div class="card mb-3 shadow-sm">
-            <div class="card-body">
-                <h5 class="card-title">Lab Task 1</h5>
-                <p class="card-text">
-                    The website includes multiple sections: a header with navigation links, an "About Us" section, 
-                    a catalog with book listings, a services section, and a contact form. The goal is to design a 
-                    simple, user-friendly library page that provides essential information, book listings, and contact options.
-                </p>
-                <a href="Lab-1\index.html" class="btn btn-success">View Lab Task 1</a>
-            </div>
+                <img src="Snapshots/task-1.png" class="card-img-top card-img-custom" alt="Snapshot of Lab Task 1">
+                <div class="card-body">
+                    <p class="h5 card-title">Lab Task 1: Library Website</p>
+                    <p class="card-text">
+                        In this lab task, we created a basic library website using HTML and inline CSS. 
+                        The website consists of multiple sections: a header with navigation links, 
+                        an "About Us" section detailing the library's history, a catalog displaying featured books, 
+                        a services section outlining the library's offerings, and a contact form. Inline CSS was used 
+                        to style the layout and elements directly within the HTML file. The task focuses on structuring 
+                        content while using basic styling techniques to enhance the user interface.
+                    </p>
+                    <a href="Lab-1\lab-1.html" class="btn btn-success">Lab Task 1</a>
+                </div>
             </div>
 
             <div class="card mb-3 shadow-sm">
-            <div class="card-body">
-                <h5 class="card-title">Lab Task 2</h5>
-                <p class="card-text">
-                    This lab task involves creating a cafe menu for "Camper Cafe" using HTML and CSS. 
-                    The website displays two main sections: Coffee and Desserts, each listing multiple items 
-                    along with their prices. The task focuses on structuring content with semantic HTML and 
-                    applying basic styling using external CSS to make the menu visually appealing. 
-                    Additionally, background images and layout enhancements are used to improve the user experience.
-                </p>
-                <a href="Lab-2\html\lab-2.html" class="btn btn-success">View Lab Task 2</a>
+                <div class="card-body">
+                    <h5 class="card-title">Lab Task 2 - edyou</h5>
+                    <p class="card-text">
+                        Lab Task 2 involves the creation of a single-page website named "edyou" aimed at promoting a private social app for college life. The page includes several key features:
+                        <ul>
+                            <li><strong>Header Section:</strong> Contains a menu button for navigation, a prominent main heading with the app's logo and tagline, and a call-to-action button for downloading the app from the Apple Store.</li>
+                            <li><strong>Main Content:</strong> Features an introductory banner with a description of the app and a modal window for users to join the waitlist.</li>
+                            <li><strong>Footer Section:</strong> Provides information about the app and additional navigation links.</li>
+                        </ul>
+                        The external CSS (`style.css`) handles styling, including background gradients, button styles, and responsiveness for various devices.
+                    </p>
+                    <a href="Lab-2\html\lab-2.html" class="btn btn-success">Lab Task 2</a>
+                </div>
             </div>
-            </div>
+
         </div>
 
  
