view btn changes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <p class="h1 text-center text-white mb-4">Web Technologies</p>
     <div class="container">
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
-            <!-- Card 1 -->
             <div class="col">
                 <div class="card mb-3 shadow-sm">
                     <img src="Snapshots/task-1.png" class="card-img-top img-fluid" alt="Snapshot of Lab Task 1">
@@ -24,7 +23,7 @@
                             to style the layout and elements directly within the HTML file. The task focuses on structuring 
                             content while using basic styling techniques to enhance the user interface.
                         </p>
-                        <a href="Lab-1/lab-1.html" class="btn btn-success">Task 1</a>
+                        <a href="Lab-1/lab-1.html" class="btn btn-success">View Task 1 -></a>
                     </div>
                 </div>
             </div>
@@ -42,7 +41,7 @@
                             </ul>
                             The external CSS (`style.css`) handles styling, including background gradients, button styles, and responsiveness for various devices.
                         </p>
-                        <a href="Lab-2/html/lab-2.html" class="btn btn-success">Task 2</a>
+                        <a href="Lab-2/html/lab-2.html" class="btn btn-success">View Task 2 -></a>
                     </div>
                 </div>
             </div>
