--- a/index.html
+++ b/index.html
@@ -1,54 +1,123 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Web Technologies</title>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
-</head>
-<body class="bg-dark">
-    <p class="h1 text-center text-white mb-4">Web Technologies</p>
-    <div class="container">
-        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
-            <div class="col">
-                <div class="card mb-3 shadow-sm">
-                    <img src="Snapshots/task-1.png" class="card-img-top img-fluid" alt="Snapshot of Lab Task 1">
-                    <div class="card-body">
-                        <p class="h5 card-title">Lab Task 1: Library Website</p>
-                        <p class="card-text">
-                            In this lab task, we created a basic library website using HTML and inline CSS. 
-                            The website consists of multiple sections: a header with navigation links, 
-                            an "About Us" section detailing the library's history, a catalog displaying featured books, 
-                            a services section outlining the library's offerings, and a contact form. Inline CSS was used 
-                            to style the layout and elements directly within the HTML file. The task focuses on structuring 
-                            content while using basic styling techniques to enhance the user interface.
-                        </p>
-                        <a href="Lab-1/lab-1.html" class="btn btn-success">View Task 1 -></a>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card mb-3 shadow-sm">
-                    <img src="Snapshots/task-2.png" class="card-img-top img-fluid" alt="Snapshot of Lab Task 2">
-                    <div class="card-body">
-                        <p class="h5 card-title">Lab Task 2 - edyou</p>
-                        <p class="card-text">
-                            Lab Task 2 involves the creation of a single-page website named "edyou" aimed at promoting a private social app for college life. The page includes several key features:
-                            <ul>
-                                <li><strong>Header Section:</strong> Contains a menu button for navigation, a prominent main heading with the app's logo and tagline, and a call-to-action button for downloading the app from the Apple Store.</li>
-                                <li><strong>Main Content:</strong> Features an introductory banner with a description of the app and a modal window for users to join the waitlist.</li>
-                                <li><strong>Footer Section:</strong> Provides information about the app and additional navigation links.</li>
-                            </ul>
-                            The external CSS (`style.css`) handles styling, including background gradients, button styles, and responsiveness for various devices.
-                        </p>
-                        <a href="Lab-2/html/lab-2.html" class="btn btn-success">View Task 2 -></a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <head>
+        <title>Web Technologies</title>
+        <meta charset="utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+    </head>
+    <body class="bg-dark">
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
-</body>
+        <p class="h1 text-center text-white mb-4">Web Technologies</p>
+        <div class="container">
+
+            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
+
+                <div class="col">
+
+                    <div class="card mb-3 shadow-sm h-100">
+
+                        <img src="Snapshots/task-1.png" class="card-img-top img-fluid" alt="Snapshot of Lab Task 1">
+
+                        <div class="card-body d-flex flex-column">
+
+                            <p class="h5 card-title">Lab Task 1: Library Website</p>
+                            <p class="card-text">
+
+                                In this lab task, we created a basic library website using HTML and inline CSS. 
+                                The website consists of multiple sections: a header with navigation links, 
+                                an "About Us" section detailing the library's history, a catalog displaying featured books, 
+                                a services section outlining the library's offerings, and a contact form. Inline CSS was used 
+                                to style the layout and elements directly within the HTML file. The task focuses on structuring 
+                                content while using basic styling techniques to enhance the user interface.
+
+                            </p>
+
+                            <a href="Lab-1/lab-1.html" class="btn btn-success mt-auto ms-auto">View Task 1 -></a>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="col">
+
+                    <div class="card mb-3 shadow-sm h-100">
+
+                        <img src="Snapshots/task-2.png" class="card-img-top img-fluid" alt="Snapshot of Lab Task 2">
+
+                        <div class="card-body card-body d-flex flex-column">
+
+                            <p class="h5 card-title">Lab Task 2 - edyou</p>
+                            <p class="card-text">
+
+                                Lab Task 2 involves the creation of a single-page website named "edyou" aimed at promoting a private social app for college life. The page includes several key features:
+                                <ul>
+
+                                    <li><strong>Header Section:</strong> Contains a menu button for navigation, a prominent main heading with the app's logo and tagline, and a call-to-action button for downloading the app from the Apple Store.</li>
+                                    <li><strong>Main Content:</strong> Features an introductory banner with a description of the app and a modal window for users to join the waitlist.</li>
+                                    <li><strong>Footer Section:</strong> Provides information about the app and additional navigation links.</li>
+
+                                </ul>
+                                The external CSS (`style.css`) handles styling, including background gradients, button styles, and responsiveness for various devices.
+
+                            </p>
+
+                            <a href="Lab-2/html/lab-2.html" class="btn btn-success mt-auto ms-auto">View Task 2 -></a>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="col">
+
+                    <div class="card mb-3 shadow-sm h-100">
+
+                        <div class="row g-0">
+
+                            <div class="col-md-6">
+
+                                <img src="Snapshots\task-3 pt1.png" class="card-img-top img-fluid" alt="Snapshot of Lab Task 2">
+
+                            </div>
+
+                            <div class="col-md-6">
+
+                                <img src="Snapshots\task-3 pt2.png" class="card-img-top img-fluid" alt="Snapshot of Lab Task 3">
+
+                            </div>
+
+                        </div>
+                        <div class="card-body card-body d-flex flex-column">
+
+                            <p class="h5 card-title">Lab Task 3 - edyou</p>
+
+                                <p class="card-text">
+                                Lab Task 3 involves the creation of a single-page website named "edyou" aimed at promoting a private social app for college life. The page includes several key features:
+                                <ul>
+                                    <li><strong>Header Section:</strong> Contains a menu button for navigation, a prominent main heading with the app's logo and tagline, and a call-to-action button for downloading the app from the Apple Store.</li>
+                                    <li><strong>Main Content:</strong> Features an introductory banner with a description of the app and a modal window for users to join the waitlist.</li>
+                                    <li><strong>Footer Section:</strong> Provides information about the app and additional navigation links.</li>
+                                </ul>
+                                The external CSS (`style.css`) handles styling, including background gradients, button styles, and responsiveness for various devices.
+
+                            </p>
+                            <a href="Lab-3/html/lab-3.html" class="btn btn-success mt-auto ms-auto">View Task 3 -></a>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+            </div>
+            
+        </div>
+
+        <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"></script>
+    </body>
 </html>
