--- a/index.html
+++ b/index.html
@@ -73,6 +73,30 @@
                 </div>
 
                 <div class="col">
+    <div class="card mb-3 shadow-sm h-100">
+
+        <img src="Snapshots/task-3 (I).png" class="card-img-top img-fluid" alt="Snapshot of Lab Task 3 (I)">
+
+        <div class="card-body card-body d-flex flex-column">
+            <p class="h5 card-title">Lab Task 3 (I) - Job Application Form</p>
+            <p class="card-text">
+                Lab Task 3 (I) involves creating a job application form for COMSATS University, focusing on non-faculty roles. The form includes several important sections:
+                <ul>
+                    <li><strong>Header Section:</strong> Displays the COMSATS University logo and the form's title, creating a branded and professional appearance.</li>
+                    <li><strong>Form Content:</strong> Collects key information from applicants, such as the applied position, personal details, NIC number, department preferences, and campus locations. It also includes fields for contact information and academic qualifications.</li>
+                    <li><strong>Campus Selection:</strong> Features multiple checkbox options for selecting campus preferences, giving applicants flexibility in indicating where they would like to work.</li>
+                    <li><strong>Table for Academic Background:</strong> Contains fields for applicants to enter their degree details, including year of award, field, board/university, and grade or division.</li>
+                </ul>
+                The form's visual design, managed through external CSS (`style.css`), ensures clarity and a clean layout, with attention to usability and responsive behavior.
+            </p>
+
+            <a href="Lab-3 (I)/index.html" class="btn btn-success mt-auto ms-auto">View Task 2 -></a>
+        </div>
+    </div>
+</div>
+
+
+                <div class="col">
 
                     <div class="card mb-3 shadow-sm h-100">
 
@@ -80,23 +104,23 @@
 
                             <div class="col-md-6">
 
-                                <img src="Snapshots\task-3 pt1.png" class="card-img-top img-fluid" alt="Snapshot of Lab Task 2">
+                                <img src="Snapshots/task-3 (II) first image.png" class="card-img-top img-fluid" alt="Snapshot of Lab Task 3 (II)">
 
                             </div>
 
                             <div class="col-md-6">
 
-                                <img src="Snapshots\task-3 pt2.png" class="card-img-top img-fluid" alt="Snapshot of Lab Task 3">
+                                <img src="Snapshots/task-3 (II) second image.png" class="card-img-top img-fluid" alt="Snapshot of Lab Task 3 (II)">
 
                             </div>
 
                         </div>
                         <div class="card-body card-body d-flex flex-column">
 
-                            <p class="h5 card-title">Lab Task 3 - edyou with signup/login</p>
+                            <p class="h5 card-title">Lab Task 3 (II)- edyou with signup/login</p>
 
                                 <p class="card-text">
-                                Lab Task 3 involves the creation of a single-page website named "edyou" aimed at promoting a private social app for college life. The page includes several key features:
+                                Lab Task 3 (II) involves the creation of a single-page website named "edyou" aimed at promoting a private social app for college life. The page includes several key features:
                                 <ul>
                                     <li><strong>Header Section:</strong> Contains a menu button for navigation, a prominent main heading with the app's logo and tagline, and a call-to-action button for downloading the app from the Apple Store.</li>
                                     <li><strong>Main Content:</strong> Features an introductory banner with a description of the app and a modal window for users to join the waitlist.</li>
@@ -105,7 +129,7 @@
                                 The external CSS (`style.css`) handles styling, including background gradients, button styles, and responsiveness for various devices.
 
                             </p>
-                            <a href="Lab-3/html/lab-3.html" class="btn btn-success mt-auto ms-auto">View Task 3 -></a>
+                            <a href="Lab-3 (II)/html/lab-3.html" class="btn btn-success mt-auto ms-auto">View Task 3 -></a>
 
                         </div>
 
