fixed some file names

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
                             </p>
 
-                            <a href="Lab-1/lab-1.html" class="btn btn-success mt-auto ms-auto">View Task 1 -></a>
+                            <a href="Lab-1/Lab-1.html" class="btn btn-success mt-auto ms-auto">View Task 1 -></a>
 
                         </div>
 
@@ -64,7 +64,7 @@
 
                             </p>
 
-                            <a href="Lab-2/html/lab-2.html" class="btn btn-success mt-auto ms-auto">View Task 2 -></a>
+                            <a href="Lab-2/html/Lab-2.html" class="btn btn-success mt-auto ms-auto">View Task 2 -></a>
 
                         </div>
 
@@ -93,7 +93,7 @@
                                 The form's visual design, managed through external CSS (`style.css`), ensures clarity and a clean layout, with attention to usability and responsive behavior.
                             </p>
 
-                            <a href="Lab-3 (I)/index.html" class="btn btn-success mt-auto ms-auto">View Task 3 (I) -></a>
+                            <a href="Lab-3 (I)/Lab-3 (I).html" class="btn btn-success mt-auto ms-auto">View Task 3 (I) -></a>
                         </div>
 
                     </div>
@@ -133,7 +133,59 @@
                                 The external CSS (`style.css`) handles styling, including background gradients, button styles, and responsiveness for various devices.
 
                             </p>
-                            <a href="Lab-3 (II)/html/lab-3.html" class="btn btn-success mt-auto ms-auto">View Task 3 (II) -></a>
+                            <a href="Lab-3 (II)/html/Lab-3 (II).html" class="btn btn-success mt-auto ms-auto">View Task 3 (II) -></a>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="col">
+
+                    <div class="card mb-3 shadow-sm h-100">
+
+                        <div class="card-body card-body d-flex flex-column">
+
+                            <p class="h5 card-title">Lab Task 4 (I)- Desktop Calculator</p>
+
+                                <p class="card-text">
+                                Lab Task 4 (I) involves the creation of a single-page website named "edyou" aimed at promoting a private social app for college life. The page includes several key features:
+                                <ul>
+                                    <li><strong>Header Section:</strong> Contains a menu button for navigation, a prominent main heading with the app's logo and tagline, and a call-to-action button for downloading the app from the Apple Store.</li>
+                                    <li><strong>Main Content:</strong> Features an introductory banner with a description of the app and a modal window for users to join the waitlist.</li>
+                                    <li><strong>Footer Section:</strong> Provides information about the app and additional navigation links.</li>
+                                </ul>
+                                The external CSS (`style.css`) handles styling, including background gradients, button styles, and responsiveness for various devices.
+
+                            </p>
+                            <a href="Lab-4 (I)/Lab-4 (I).html" class="btn btn-success mt-auto ms-auto">View Task 4 (I) -></a>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+                <div class="col">
+
+                    <div class="card mb-3 shadow-sm h-100">
+
+                        <div class="card-body card-body d-flex flex-column">
+
+                            <p class="h5 card-title">Lab Task 4 (II)- Form</p>
+
+                                <p class="card-text">
+                                Lab Task 4 (II) involves the creation of a single-page website named "edyou" aimed at promoting a private social app for college life. The page includes several key features:
+                                <ul>
+                                    <li><strong>Header Section:</strong> Contains a menu button for navigation, a prominent main heading with the app's logo and tagline, and a call-to-action button for downloading the app from the Apple Store.</li>
+                                    <li><strong>Main Content:</strong> Features an introductory banner with a description of the app and a modal window for users to join the waitlist.</li>
+                                    <li><strong>Footer Section:</strong> Provides information about the app and additional navigation links.</li>
+                                </ul>
+                                The external CSS (`style.css`) handles styling, including background gradients, button styles, and responsiveness for various devices.
+
+                            </p>
+                            <a href="Lab-4 (I)/Lab-4 (I).htmll" class="btn btn-success mt-auto ms-auto">View Task 4 (II) -></a>
 
                         </div>
 
