structure almost set for both task 4's

--- a/index.html
+++ b/index.html
@@ -145,6 +145,8 @@
 
                     <div class="card mb-3 shadow-sm h-100">
 
+                        <img src="Snapshots/task-4 (I).png" class="card-img-top img-fluid" alt="Snapshot of Lab Task 4 (I)">
+
                         <div class="card-body card-body d-flex flex-column">
 
                             <p class="h5 card-title">Lab Task 4 (I)- Desktop Calculator</p>
@@ -171,6 +173,8 @@
 
                     <div class="card mb-3 shadow-sm h-100">
 
+                        <img src="Snapshots/task-4 (II).png" class="card-img-top img-fluid" alt="Snapshot of Lab Task 4 (II)">
+
                         <div class="card-body card-body d-flex flex-column">
 
                             <p class="h5 card-title">Lab Task 4 (II)- Form</p>
@@ -185,7 +189,7 @@
                                 The external CSS (`style.css`) handles styling, including background gradients, button styles, and responsiveness for various devices.
 
                             </p>
-                            <a href="Lab-4 (I)/Lab-4 (I).htmll" class="btn btn-success mt-auto ms-auto">View Task 4 (II) -></a>
+                            <a href="Lab-4 (II)/Lab-4 (II).html" class="btn btn-success mt-auto ms-auto">View Task 4 (II) -></a>
 
                         </div>
 
