--- a/Lab-4 (II)/Lab-4 (II).html
+++ b/Lab-4 (II)/Lab-4 (II).html
@@ -7,58 +7,50 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     </head>
 
-    <body>
+    <body class="main-container flex">
         
-        <div class="main-container flex">
+        <div class="header"></div>
 
-            <div class="header"></div>
+        <div class="main-form flex">
 
-            <div class="main">
+            <div class="left-panel flex">
 
-                <div class="form flex">
+                <h1>Contact Now</h1>
+                <input type="text" placeholder="Username">
+                <input type="password" placeholder="Password">
+                <input type="text" placeholder="Department">
+                <input type="text" placeholder="Message">
+                <button>Send Message</button>
 
-                    <div class="left-panel flex">
+            </div>
 
-                        <h1>Contact Now</h1>
-                        <input type="text" placeholder="Username">
-                        <input type="password" placeholder="Password">
-                        <input type="text" placeholder="Department">
-                        <input type="text" placeholder="Message">
-                        <button>Send Message</button>
+            <div class="right-panel">
 
+                <div class="right-header flex">
+
+                    <div class="blue-box right-header-item flex">
+                        <i class="fab fa-facebook-f"></i>
                     </div>
 
-                    <div class="right-panel">
-
-                        <div class="right-header flex">
-
-                            <div class="blue-box right-header-item flex">
-                                <i class="fab fa-facebook-f"></i>
-                            </div>
-
-                            <div class="light-blue-box right-header-item flex">
-                                <i class="fab fa-twitter"></i>
-                            </div>
-
-                            <div class="pink-box right-header-item flex">
-                                <i class="fas fa-futbol"></i>
-                            </div>
-
-                            <div class="gray-box right-header-item flex">
-                                <i class="fab fa-google-plus-g"></i>
-                            </div>                      
-
-                        </div>
-
+                    <div class="light-blue-box right-header-item flex">
+                        <i class="fab fa-twitter"></i>
                     </div>
+
+                    <div class="pink-box right-header-item flex">
+                        <i class="fas fa-futbol"></i>
+                    </div>
+
+                    <div class="gray-box right-header-item flex">
+                        <i class="fab fa-google-plus-g"></i>
+                    </div>                      
 
                 </div>
 
             </div>
 
-            <div class="footer"></div>
-
         </div>
+
+        <div class="footer"></div>
         
     </body>
 
