Lab 4 (II) right panel needs formatting and responsiveness

--- a/Lab-4 (II)/Lab-4 (II).html
+++ b/Lab-4 (II)/Lab-4 (II).html
@@ -46,6 +46,16 @@
 
                 </div>
 
+                <div class="input-container flex">
+                    <input type="text">
+                    <i class="fas fa-user"></i>
+                </div>
+
+                <div class="input-container flex">
+                    <input type="text" placeholder="asd">
+                    <i class="fas fa-envelope"></i>
+                </div>
+
             </div>
 
         </div>
