--- a/index.html
+++ b/index.html
@@ -177,17 +177,17 @@
 
                         <div class="card-body card-body d-flex flex-column">
 
-                            <p class="h5 card-title">Lab Task 4 (II)- Form</p>
+                            <p class="h5 card-title">Lab Task 4 (II) - Contact Now Form</p>
 
-                                <p class="card-text">
-                                Lab Task 4 (II) involves the creation of a single-page website named "edyou" aimed at promoting a private social app for college life. The page includes several key features:
+                            <p class="card-text">
+                                Lab Task 4 (II) focuses on creating a user-friendly "Contact Now" form for a website. This form is designed to facilitate communication between users and the organization. Key features of the form include:
                                 <ul>
-                                    <li><strong>Header Section:</strong> Contains a menu button for navigation, a prominent main heading with the app's logo and tagline, and a call-to-action button for downloading the app from the Apple Store.</li>
-                                    <li><strong>Main Content:</strong> Features an introductory banner with a description of the app and a modal window for users to join the waitlist.</li>
-                                    <li><strong>Footer Section:</strong> Provides information about the app and additional navigation links.</li>
+                                    <li><strong>Form Structure:</strong> A clean layout with a left panel for user input, including fields for username, password, department, and message, ensuring easy data entry.</li>
+                                    <li><strong>Social Media Integration:</strong> A right panel that displays social media icons, allowing users to connect with the organization through various platforms.</li>
+                                    <li><strong>Input Fields:</strong> Each input field has placeholder text to guide users, with a visually appealing design and responsiveness to ensure usability on different devices.</li>
+                                    <li><strong>Responsive Design:</strong> The layout adjusts based on screen size, providing a seamless experience on both desktop and mobile devices.</li>
                                 </ul>
-                                The external CSS (`style.css`) handles styling, including background gradients, button styles, and responsiveness for various devices.
-
+                                The external CSS (`style.css`) is utilized for styling, implementing color schemes, button effects, and overall aesthetics to enhance the user experience.
                             </p>
                             <a href="Lab-4 (II)/Lab-4 (II).html" class="btn btn-success mt-auto ms-auto">View Task 4 (II) -></a>
 
