task 4 II completed

--- a/Lab-4 (II)/Lab-4 (II).html
+++ b/Lab-4 (II)/Lab-4 (II).html
@@ -56,6 +56,17 @@
                     <i class="fas fa-envelope"></i>
                 </div>
 
+                <div class="input-container flex">
+                    <select name="" id="">
+                        <option value="">Select a Department</option>
+                    </select>
+                </div>
+
+                <div class="input-container flex">
+                    <textarea name="" id="" rows="8" cols="110"></textarea>
+                </div>
+                
+
             </div>
 
         </div>
