--- a/Lab-4 (I)/Lab-4 (I).html
+++ b/Lab-4 (I)/Lab-4 (I).html
@@ -10,39 +10,77 @@
 
     <body>
         
-        <div class="main-container">
+        <div>
+            <header class="flex">
 
-            <div class="header">
-
-                <div class="flex-left">
+                <div class="header-left flex">
 
                     <i class="fas fa-bars"></i>
-
-                    <h2><b>Standard</b></h2>
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4h6v6H4V4zM14 4h6v6h-6V4zM4 14h6v6H4v-6zM14 14h6v6h-6v-6z"/>
-                    </svg>
+                    <h1>Standard</h1>
+                    <i class="fas fa-th-large"></i> 
 
                 </div>
 
                 <i class="fas fa-history"></i>
+            </header>
 
-            </div>
+            <main class="flex">
+                <section class="constant">
+                    <h1>0</h1>
+                </section>
 
-            <div class="text-item">
+                <section class="m-btn-group flex">
+                    <button class="m-btn-grey m-btn">MC</button>
+                    <button class="m-btn-grey m-btn">MR</button>
+                    <button class="m-btn-white m-btn">M+</button>
+                    <button class="m-btn-white m-btn">M-</button>
+                    <button class="m-btn-white m-btn">MS</button>
+                    <button class="m-btn-grey m-btn">M&darr;</button>
+                </section>
 
-                <input type="text">
+                <section class="second-btn-group flex">
+                    <button class="color-2">%</button>
+                    <button class="color-2">CE</button>
+                    <button class="color-2">C</button>
+                    <button class="color-2">Icon</button>
+                </section>
 
-            </div>
+                <section class="third-btn-group flex">
+                    <button class="color-2">%</button>
+                    <button class="color-2">E</button>
+                    <button class="color-2">C</button>
+                    <button class="color-2">/</button>
+                </section>
 
-            <div class="scientific-btn">
+                <section class="fourth-btn-group flex">
+                    <button class="color-1">7</button>
+                    <button class="color-1">8</button>
+                    <button class="color-1">9</button>
+                    <button class="color-2">X</button>
+                </section>
 
-            </div>
+                <section class="fifth-btn-group flex">
+                    <button class="color-1">4</button>
+                    <button class="color-1">5</button>
+                    <button class="color-1">6</button>
+                    <button class="color-2">-</button>
+                </section>
 
-            <div class="other-btn">
+                <section class="sixth-btn-group flex">
+                    <button class="color-1">1</button>
+                    <button class="color-1">2</button>
+                    <button class="color-1">3</button>
+                    <button class="color-2">+</button>
+                </section>
 
-            </div>
+                <section class="seventh-btn-group flex">
+                    <button class="color-1">+/-</button>
+                    <button class="color-1">0</button>
+                    <button class="color-1">.</button>
+                    <button class="color-3">=</button>
+                </section>
 
+            </main>
 
         </div>
 
