Lab 4 (I) & (II) finalized

--- a/Lab-4 (I)/Lab-4 (I).html
+++ b/Lab-4 (I)/Lab-4 (I).html
@@ -46,10 +46,10 @@
                 </section>
 
                 <section class="third-btn-group flex">
-                    <button class="color-2">%</button>
-                    <button class="color-2">E</button>
-                    <button class="color-2">C</button>
-                    <button class="color-2">/</button>
+                    <button class="color-2">1/x</button>
+                    <button class="color-2">x<sup>2</sup></button>
+                    <button class="color-2"><sup>2</sup> √ x</button>
+                    <button class="color-2">÷</button>
                 </section>
 
                 <section class="fourth-btn-group flex">
