--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                         <div class="card-body d-flex flex-column">
 
                             <p class="h5 card-title">Lab Task 1: Library Website</p>
+                            
                             <p class="card-text">
 
                                 In this lab task, we created a basic library website using HTML and inline CSS. 
@@ -50,6 +51,7 @@
                         <div class="card-body card-body d-flex flex-column">
 
                             <p class="h5 card-title">Lab Task 2 - edyou</p>
+
                             <p class="card-text">
 
                                 Lab Task 2 involves the creation of a single-page website named "edyou" aimed at promoting a private social app for college life. The page includes several key features:
@@ -123,7 +125,7 @@
 
                             <p class="h5 card-title">Lab Task 3 (II)- edyou with signup/login</p>
 
-                                <p class="card-text">
+                            <p class="card-text">
                                 Lab Task 3 (II) involves the creation of a single-page website named "edyou" aimed at promoting a private social app for college life. The page includes several key features:
                                 <ul>
                                     <li><strong>Header Section:</strong> Contains a menu button for navigation, a prominent main heading with the app's logo and tagline, and a call-to-action button for downloading the app from the Apple Store.</li>
@@ -151,16 +153,18 @@
 
                             <p class="h5 card-title">Lab Task 4 (I)- Desktop Calculator</p>
 
-                                <p class="card-text">
-                                Lab Task 4 (I) involves the creation of a single-page website named "edyou" aimed at promoting a private social app for college life. The page includes several key features:
+                           <p class="card-text">
+                                This lab task involves creating a calculator application with a user-friendly interface using HTML, CSS, and FontAwesome for icons. Key features of the calculator include:
                                 <ul>
-                                    <li><strong>Header Section:</strong> Contains a menu button for navigation, a prominent main heading with the app's logo and tagline, and a call-to-action button for downloading the app from the Apple Store.</li>
-                                    <li><strong>Main Content:</strong> Features an introductory banner with a description of the app and a modal window for users to join the waitlist.</li>
-                                    <li><strong>Footer Section:</strong> Provides information about the app and additional navigation links.</li>
+                                    <li><strong>Header:</strong> A functional header with navigation icons for history and mode selection, providing easy access to calculator features.</li>
+                                    <li><strong>Calculator Display:</strong> A large, constant display section that shows the current value, ensuring visibility during calculations.</li>
+                                    <li><strong>Button Groups:</strong> Multiple button groups are arranged for different operations, including memory functions, arithmetic operators, and numeric input, offering a familiar calculator layout.</li>
+                                    <li><strong>Color Scheme and Styling:</strong> Custom button styles are applied to distinguish between numeric, arithmetic, and functional buttons, while hover effects are used for enhanced interactivity.</li>
+                                    <li><strong>External CSS:</strong> The external stylesheet (`style.css`) is used to define the overall layout, colors, and button styles, contributing to a clean and consistent visual appearance.</li>
                                 </ul>
-                                The external CSS (`style.css`) handles styling, including background gradients, button styles, and responsiveness for various devices.
-
+                                The layout is built using flexbox to ensure a responsive and neatly arranged design that works well across different screen sizes.
                             </p>
+
                             <a href="Lab-4 (I)/Lab-4 (I).html" class="btn btn-success mt-auto ms-auto">View Task 4 (I) -></a>
 
                         </div>
