Starting fifth lab task with setting up the Hero Section Carousel

--- a/index.html
+++ b/index.html
@@ -201,6 +201,35 @@
 
                 </div>
 
+                <div class="col">
+
+                    <div class="card mb-3 shadow-sm h-100">
+
+                        <img src="Snapshots/task-5.png" class="card-img-top img-fluid" alt="Snapshot of Lab Task 4 (II)">
+
+                        <div class="card-body card-body d-flex flex-column">
+
+                            <p class="h5 card-title">Lab Task 5 - Sports Week Website with Bootstrap</p>
+
+                            <p class="card-text">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam rutrum nibh eget sem eleifend, id venenatis ante egestas. Mauris tempor congue augue. Aliquam erat volutpat
+                                <ul>
+                                    <li><strong>Lorem ipsum dolor sit amet</strong> Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Pellentesque</li>
+                                    <li><strong>Donec facilisis diam</strong> Quisque lobortis porttitor sem, quis aliquam arcu porttitor non. Ut mollis libero eu ligula dictum, a consectetur massa porttitor</li>
+                                    <li><strong>Maecenas tristique</strong> Etiam eleifend, ligula id mollis fringilla, magna ex porta nisi, vel bibendum turpis turpis vel augue. Proin at erat semper, dapibus nibh ut</li>
+                                    <li><strong>Cras tempus</strong> vehicula a dolor ut viverra. Vestibulum vestibulum fringilla efficitur. Cras orci ipsum, tristique eu ultrices eget, bibendum eu lacus. Cras</li>
+                                </ul>
+                                Etiam eleifend, ligula id mollis fringilla, magna ex porta nisi, vel bibendum turpis turpis vel augue. Proin at erat semper, dapibus nibh ut,
+                            </p>
+                            <a href="Lab-5/Lab-5.html" class="btn btn-success mt-auto ms-auto">View Task 5 -></a>
+
+                        </div>
+
+                    </div>
+
+                </div>
+
+
             </div>
             
         </div>
